--- a/_posts/2020-05-16-nlp_tf-idf.md
+++ b/_posts/2020-05-16-nlp_tf-idf.md
@@ -25,7 +25,7 @@ tag: NLP
 
 나머지 수치 하나는 **단어별 문서 빈도(Document Frequency, DF)** 입니다. DF는 특정 단어가 말뭉치 내에 있는 전체 문서 중 몇 개의 문서에 등장했는지를 나타내는 수치입니다. 단어 가중치에서 DF를 고려하는 이유는 무엇일까요? 처음에 뇌구조를 생각했던 것처럼 잠시 자연어처리를 벗어난 다른 주제로부터 DF가 중요한 이유를 알아보도록 합시다. 아래는 한 블로그에 올라온 점심 식단표입니다. (정확히는 훈련소 식단을 복원한 거라고 합니다.)
 
-<img src="https://postfiles.pstatic.net/20150614_70/sagt9590_1434287858797qqXUA_PNG/%C1%DF%BD%C4.png?type=w1" alt="foodPlanning" style="zoom: 80%;" />
+<p align="center"><img src="https://postfiles.pstatic.net/20150614_70/sagt9590_1434287858797qqXUA_PNG/%C1%DF%BD%C4.png?type=w1" alt="foodPlanning" style="zoom: 90%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://blog.naver.com/PostView.nhn?blogId=sagt9590&logNo=220390087890&proxyReferer=https:%2F%2Fwww.google.com%2F">네이버 블로그</a></p>
 
