--- a/_posts/2020-05-12-nlp_bow.md
+++ b/_posts/2020-05-12-nlp_bow.md
@@ -21,7 +21,7 @@ tag: NLP
 
 **Bag of Words** 는 문서를 여러 단어가 들어있는 가방(bag)처럼 생각하는 표현 방식입니다. 유튜브에 존재하는 왓츠 인 마이백(What's in my bag?) 영상을 떠올려 봅시다. 해당 영상에서 유튜버는 자기 가방에 들어있는 물건을 하나씩 꺼내어 확인해주는데요. 이런 방식을 문서에 적용한 것이 Bag of Words 입니다. 아래 그림을 보며 설명을 이어나가겠습니다. 
 
-![bag_of_words](https://dudeperf3ct.github.io/images/lstm_and_gru/bag-of-words.png)
+<p align="center"><img src="https://dudeperf3ct.github.io/images/lstm_and_gru/bag-of-words.png" alt="bag_of_words"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://dudeperf3ct.github.io/lstm/gru/nlp/2019/01/28/Force-of-LSTM-and-GRU/">dudeperf3ct.github.io</a></p>
 
