--- a/_posts/2020-05-16-nlp_tf-idf.md
+++ b/_posts/2020-05-16-nlp_tf-idf.md
@@ -15,7 +15,7 @@ tag: NLP
 
 우리는 살면서 일어나는 많은 일을 동일한 우선순위에서 대하지 않습니다. 아래는 *"IT기업에 고용된 개발자의 뇌 구조"* 라는 제목의 이미지입니다. 설명을 돕기 위한 이미지일 뿐이니 진지하게 받아들이실 필요는 없습니다. 잠시 아래의 이미지를 보고 설명을 이어가도록 하겠습니다.
 
-![brain](https://t1.daumcdn.net/cfile/tistory/194EB11149EC2708E3)
+<p align="center"><img src="https://t1.daumcdn.net/cfile/tistory/194EB11149EC2708E3" alt="brain" style="zoom:100%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://newstars.tistory.com/35">newstars.tistory.com</a></p>
 
@@ -87,7 +87,7 @@ $$
 
 처음 TF-IDF라는 가중치 부여 방법이 고안되고 시간이 지나면서 이를 보정하기 위한 다양한 측정 방법이 생겨났습니다. 아래는 TF와 IDF를 측정하기 위한 다양한 방법을 담은 이미지입니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/89900762-1dc88980-dc1f-11ea-939a-ddf449fbc5ff.png" alt="tf_var" style="zoom:50%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/89900762-1dc88980-dc1f-11ea-939a-ddf449fbc5ff.png" alt="tf_var" style="zoom:50%;" /></p>
 
 <img src="https://user-images.githubusercontent.com/45377884/89900750-1bfec600-dc1f-11ea-8ca7-dde73e0ecb8e.png" alt="idf_var" style="zoom:50%;" />
 
@@ -96,7 +96,7 @@ Information Retrieval Models</a></p>
 
 이들 중 가장 좋은 성능을 보이는 절대적인 방법이 있는 것은 아닙니다. 분석할 말뭉치나 TF-IDF를 적용할 태스크에 따라 가장 적절한 방법이 달라집니다. 아래는 일반적으로 가장 많이 사용되는 TF-IDF 방식을 나타낸 것입니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/81643718-1b5c6500-9461-11ea-8e30-c41cbc1e6dc7.png" alt="tf-idf" style="zoom:80%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/81643718-1b5c6500-9461-11ea-8e30-c41cbc1e6dc7.png" alt="tf-idf" style="zoom:80%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://books.google.co.kr/books/about/Information_Retrieval_Models.html?id=SFavNAEACAAJ&redir_esc=y">
 Information Retrieval Models</a></p>
