--- a/_posts/2020-06-15-ds_array.md
+++ b/_posts/2020-06-15-ds_array.md
@@ -27,7 +27,7 @@ x = ['a', 'b', 'd', 'e', 'f']
 
 배열 안에 특정 요소가 있는 지를 탐색하는 알고리즘을 설계해 봅시다. 정렬된 배열의 경우 다른 알고리즘을 적용할 수도 있지만, 일반적인 경우는 0번째 인덱스부터 순차적으로 접근하여 그 값이 찾고자 하는 값인지 아닌 지를 비교합니다. 이를 **선형 탐색(Linear search)** 알고리즘이라고 합니다. 아래는 배열에서 선형 탐색 알고리즘이 이루어지는 과정을 도식화하여 나타낸 것입니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/89652554-95857400-d900-11ea-9e8a-30b1f50cc9ec.png" alt="array1" style="zoom:67%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/89652554-95857400-d900-11ea-9e8a-30b1f50cc9ec.png" alt="array1" style="zoom:67%;" /></p>
 
 위에서 등장한 배열 `x` 에서 선형 탐색 알고리즘을 통해 `'c'` 와 `'d'` 를 찾는 과정을 생각해봅시다. 먼저 `'c'` 를 찾는 과정입니다. 우리는 `'c'` 가 없다는 것을 한눈에 알 수 있지만 컴퓨터는 한 번에 하나의 요소밖에 보지 못하므로 순차적으로 매 인덱스에 위치한 요소값을 확인하여 비교하여야 합니다. 알고리즘은 `True` 가 나올 때까지 진행되므로 배열 내에 없는 요소를 찾을 때는 모든 요소를 비교해야 합니다. 그렇기 때문에 배열의 길이인 $N$ 번의 Operation을 수행합니다. 이번에는 배열 안에 있는 `'d'` 를 찾는 과정입니다. `'c'` 를 찾을 때와 같은 작업을 계속 반복하다가 해당 요소를 발견하면 종료합니다. 그렇기 때문에 찾고자 하는 값이 첫 번째로 있는 인덱스 (최대 $N$ 번)의 Operation을 수행하게 됩니다. 
 
@@ -39,7 +39,7 @@ x = ['a', 'b', 'd', 'e', 'f']
 
 우리의 목표는 하나의 요소를 삽입하는 것이므로 가장 먼저 원래의 배열보다 하나 더 큰 빈 배열을 만듭니다. 두 번째로는 새로운 요소를 삽입할 인덱스 이전까지의 참조(Reference)를 원래의 배열 `x` 에서 새로운 배열 `y` 로 복사합니다. 새로 삽입할 요소의 인덱스가 되면 그 참조를 우리가 삽입하고자 하는 값, 즉  `'c'` 에 연결합니다. 다시 다음 인덱스부터는 원래 배열 `x` 의 참조를 새로 만드는 배열의 하나씩 증가한 인덱스 `y` 에 복사합니다. 마지막으로 `x` 의 참조를 `y` 의 참조로 변경하면 삽입 과정이 완료됩니다. 아래는 이 과정을 도식화하여 나타낸 것입니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/89652559-96b6a100-d900-11ea-994c-eabeb330c5b9.png" alt="array2" style="zoom:67%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/89652559-96b6a100-d900-11ea-994c-eabeb330c5b9.png" alt="array2" style="zoom:67%;" /></p>
 
 이 과정을 파이썬 코드로 구현하면 아래와 같습니다.
 
@@ -69,7 +69,7 @@ x = y
 
 배열에서 특정 요소를 삭제하는 과정은 삽입 과정과 유사합니다. 배열에서 `'d'` 를 삭제하는 작업에 대해 생각해봅시다. 배열에는 빈자리도 있을 수 없으므로 하나의 요소를 삭제하기 위해서는 먼저 인덱스가 하나 적은 배열을 만들어야 합니다. 이후에는 삭제하려는 인덱스 이전에 있는 참조를 새로운 배열에 그대로 복사합니다. 삭제하려는 인덱스 이전에 있는 참조는 건너뛰게 되며 해당 인덱스 이후부터는 다시 새로운 배열의 하나씩 감소시킨 인덱스에 참조를 복사합니다. 마지막으로 원래의 배열 `x` 의 참조를 새로운 배열의 참조로 변경하면 삭제 과정이 완료됩니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/89652560-974f3780-d900-11ea-9836-0d8c3cb6bace.png" alt="array3" style="zoom:67%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/89652560-974f3780-d900-11ea-9836-0d8c3cb6bace.png" alt="array3" style="zoom:67%;" /></p>
 
 이 과정을 파이썬 코드로 구현하면 아래와 같이 됩니다.
 
