--- a/_posts/2020-07-02-tree.md
+++ b/_posts/2020-07-02-tree.md
@@ -13,79 +13,99 @@ tag: Data Structure
 
 # Tree
 
-트리(Tree) 구조는 이전에 배운 Array, Linked List와 같이 데이터 저장 그리고 그들의 Operation들을 표현하기 위한 Abstract Data Type 중 하나이다. 트리에서는 데이터가 아래 그림과 같이 트리 구조로 저장된다.
+이번 게시물에서 배울 자료구조는 **트리(Tree)** 입니다. 트리 구조 역시 배열(Array), 연결된 리스트(Linked List)와 동일하게 데이터를 저장하고 데이터간의 Operation을 표현하기 위한 추상화된 데이터 타입 중 하나입니다. 연결된 리스트를 변형한 것으로 연결된 리스트에서는 다른 노드를 가리키는 레퍼런스(Reference)가 하나뿐이었지만, 트리 구조에서는 여러 개의 레퍼런스를 가질 수 있습니다. 한 노드에서 시작해 여러 노드로 뻗어 나가는 모습이 나무를 거꾸로 뒤집은 모양과 유사하다고 하여 트리라는 이름이 붙었습니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/86300653-81ce5a00-bc3e-11ea-85a9-5fe686cb4c9d.png" alt="ds_tree_1" style="zoom: 80%;" />
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Tree_%28computer_science%29.svg/800px-Tree_%28computer_science%29.svg.png" alt="Tree" style="zoom:50%;" />
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Tree_(data_structure)">위키피디아 - 트리(자료구조)</a></p>
 
-트리 구조는 Linked List에서 가능했던 Operation 삽입(Insert), 삭제(Delete), 탐색(Search)을 모두 제공하며, 트리에만 존재하는 트래버스(Traverse)라는 새로운 Operation도 제공한다.
 
+
+트리 구조는 연결된 리스트의 일부를 변형시킨 것으로 연결된 리스트에서 가능했던 삽입(Insert), 삭제(Delete), 탐색(Search)이 모두 가능합니다. 또한 트리 구조에는 트래버스(Traverse)라는 새로운 작업이 있습니다.
 
 
 ## 트리 구조에서 사용되는 용어
 
-트리에서 사용되는 용어는 하나의 족보를 보고 있다고 생각하면 될 것 같다. 먼저, 트리 구조에서 가장 위에 위치하고 있는 노드는 **루트(Root)** 라고 부른다. 한 노드가 어떤 노드를 직접적으로 가리키고 있을 때, 가리키는(엣지가 나가는) 노드는 **부모(Parent)** 라고 하며 가리킴 받는 노드는 **자식(Child)** 이라고 한다. 또한 동일한 부모를 가지는 노드는 모두 **Siblings** 라고 한다. 더이상 자식(Child)를 갖지 않는 노드는 **Leaves** 라고도 부르고 **Terminal Node** 라고도 한다. 반대로 자식을 갖는 노드, 즉 Terminal Node가 아닌 노드는 **Internal Node** 라고 한다.
+트리 구조는 연결된 리스트보다는 훨씬 복잡합니다. 그렇기 때문에 트리의 복잡한 구조를 말로 나타내기 위한 다양한 용어들이 존재합니다. 트리 구조에서 사용되는 용어에 대해 아래 그림을 보며 알아봅시다.
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86303119-d1fcea80-bc45-11ea-89c5-331e7bba2374.png" alt="tree_term1" style="zoom:63%;" /></p>
+![tree_terms](https://www.tutorialspoint.com/data_structures_algorithms/images/binary_tree.jpg)
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86303225-2b651980-bc46-11ea-9352-a722b327b597.png" alt="tree_term2" style="zoom:67%;" /></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.tutorialspoint.com/data_structures_algorithms/tree_data_structure.htm">tutorialspoint.com</a></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+가장 먼저 트리 최상단에 위치한 노드를 가리키는 용어는 **루트(Root)** 입니다. 그리고 직접 연결되어 있는 노드 중 상단에 위치한 노드를 **부모(Parent)** 노드라고 하고 아래에 위치한 노드를 **자식(Child)** 노드라고 합니다. 동일한 부모 노드로부터 나온 자식 노드는 서로 **형제/자매(Siblings)** 노드라고 합니다. 그리고 자식 노드를 갖지 않는 노드는 **리프(Leaf)** 노드라고 하며 다른 말로는 **터미널(Terminal)** 노드라고도 합니다. 리프 노드가 아닌 노드는 모두 인터널(Internal) 노드라고 합니다.
 
-부모 노드를 찾아 계속 거슬러 올라갔을 때 만나는 노드는 모두 **조상(Ancestor)** 이라고 하며 동일한 조상을 같는 노드는 그 조상 노드의 **후손(Descendant)** 이라고 한다. 그리고 특정 노드로부터 루트까지 거슬러 올라갔을 때 거치는 과정을 **경로(Path)** 라고 한다. 경로는 루트부터 해당 노드까지 최단 거리로 가능 방법이기도 하다.
+<img src="https://callisto.ggsrv.com/imgsrv/FastFetch/UBER1/9781682176771_00186" alt="tree_terms2"  />
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86303838-fb1e7a80-bc47-11ea-84f1-2e3e9f5fe5fd.png" alt="tree_term3" style="zoom:60%;" /></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://science.jrank.org/programming/Tree_Structures.html">science.jrank.org</a></p>
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86303848-07a2d300-bc48-11ea-9067-b2d47c36e8f8.png" alt="tree_term4" style="zoom:67%;" /></p>
+특정 노드에서부터 트리의 위쪽으로 거슬러 올라가면서 만나는 모든 노드를 **조상(Ancestor)** 노드라고 하며, 반대로 아래에 있는 모든 노드는 **후손(Descendant)** 노드라고 합니다.
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+<img src="http://www.btechsmartclass.com/data_structures/ds_images/Path.png" alt="tree_terms3"  />
 
-특정 노드의 **깊이(Depth)** 는 해당 노드까지의 경로의 길이를 나타내고 트리 전체의 **높이(Height)** 는 최대 경로의 길이를 나타낸다. 그리고 자식 노드의 개수를 차수(Degree)라고 하며 트리의 존재하는 모든 노드의 개수를 트리의 크기(Size)라고 한다. 아래 그림에서 B의 깊이는 2이고 차수는 4이다. 트리 전체의 높이는 3이고 크기는 8이라고 할 수 있다.
+<p align="center" style="font-size:80%">이미지 출처 : <a href="http://www.btechsmartclass.com/data_structures/tree-terminology.html">btechsmartclass.com</a></p>
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86304582-34f08080-bc4a-11ea-896d-51fda9b012c1.png" alt="tree_term5" style="zoom:67%;" /></p>
+특정 노드로부터 다른 노드로 갈 때 거치는 과정을 **경로(Path)** 라고 합니다. **경로 길이(Length)** 는 출발 노드로부터 목적 노드까지 가는데 거치는 노드의 개수입니다. 위 이미지에서 제시한 두 예시의 경로 길이는 각각 $3, 2$ 가 됩니다. 그리고 **깊이(Depth)** 는 루트로부터 목적 노드까지의 경로 길이를 나타내는 용어입니다.
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+<img src="http://www.btechsmartclass.com/data_structures/ds_images/Height.png" alt="tree_term4"  />
 
-아래 그림에서의 왼쪽과 같이 모든 노드가 꽉 차있는 트리는 **Full Tree** 라고 한다. Full Tree는 새로운 노드를 추가할 때 트리의 높이가 늘어나게 된다. **Complete Tree** 라는 개념이 있다. 해당 트리의 높이보다 하나 적은 Depth까지는 **Full Tree** 이고 트리의 최하단이 왼쪽부터 채워지고 있을 때 이를 Complete Tree라고 한다.
+**높이(Height)** 는 트리에 존재하는 최대 경로 길이를 나타냅니다. 아래는 $I, J, K$ 노드에서 출발하여 루트 노드로 가는 경로의 길이가 최대이며 이 값이 3이므로 이 트리의 높이는 3이라고 할 수 있습니다.
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86304565-2c984580-bc4a-11ea-9cc0-f6f77a099763.png" alt="tree_term6" style="zoom:67%;" /></p>
+![tree_term_degree](http://www.btechsmartclass.com/data_structures/ds_images/Degree.png)
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
-
-위 그림에서 노드 B, C 의 Next Node를 가리키는 부분을 각각 1,2,3,4라고 하자. 그림에서는 왼쪽부터 1, 2가 채워져 있으므로 Complete tree이며 마찬가지로 3에 어떤 자료가 삽입되어 1,2,3 이 채워져 있어도 Complete Tree라고 한다. 하지만 1,2가 채워진 이후에 어떤 자료가 4에 채워져서 1,2,4가 채워진다면 왼쪽부터 차례대로 채워지지 않았으므로 Complete Tree라고 하지 않는다.
+특정 노드가 가지고 잇는 자식 노드의 개수를 **차수(Degree)** 라고 하며 트리에 존재하는 모든 노드의 개수를 트리의 **크기(Size)** 라고 합니다. 위 이미지에 있는 트리는 총 11개의 노드를 가지고 있으므로 사이즈를 11이라 할 수 있습니다. 
 
 
 
-## 트리 구조의 특징
+## 트리의 특징
 
-트리 구조에 존재하는 엣지의 개수는 (노드 개수 - 1)이다. 루트를 제외한 모든 노드가 가리킴을 받기 때문이다.
+트리에 존재하는 레퍼런스(엣지)의 개수는 노드 개수보다 하나가 적습니다. 루트를 제외한 모든 노드가 레퍼런스를 받기 때문에 레퍼런스 개수에 1을 더해주면 엣지의 개수가 됩니다.
 
-그리고 특정 조건에서 노드의 개수를 구할 수 있다. 트리의 차수가 $d$ 일 때, 깊이 $i$ 에서의 최대 노드 개수는 $d^i$ 이다. 동일하게 생각해보면 차수가 $d$ 이고 높이가 $h$ 인 트리의 최대 Leaf의 개수는 $d^h$ 이다. 예를 들어, 차수가 $4$ 인 높이 $3$ 인 Full Tree라면 깊이 $3$ 에서의 노드 개수(= 해당 트리의 Leaf의 개수)는 $4^3 = 64$ 이다.
+특정 조건에서의 최대 노드 개수도 구할 수 있습니다. 최대 차수가 $d$ 인 트리에 대해서 깊이 $i$ 에서의 최대 노드 개수는 $d^i$ 입니다. 비슷하게 생각해보면 차수가 $d$ 이고 높이가 $h$ 인 트리에서 최대 리프 노드의 개수 역시 $d^h$ 로 나타낼 수 있습니다. 예를 들어, 차수가 $4$ 이고 높이가 $3$ 인 트리는 최대 $4^3 = 64$ 개의 리프 노드를 가질 수 있습니다.
 
-또한, 트리의 Degree가 $d$ 일 때, 높이 $h$ 에서의 최대 노드 개수는 $1+d+d^2+ \cdots + d^h = \frac{d^{h+1} - 1}{d - 1}$ 이다. 따라서, 차수가 $4$ 인 높이 $3$ 인 Full Tree에 있는 노드의 개수는 $\frac{4^{3+1} - 1}{4 - 1} = \frac{255}{3} = 85$ 이다. 
-
-Complete Tree에 대해서는 차수가 $d$ 이고 크기가 $s$일 때의 높이 $h$ 를 $h = \log_d(s(d-1)+1)-1$ 식을 구할 수 있다. 
+등비수열 공식을 활용하면 최대 차수가 $d$ 이고 높이가 $h$ 인 트리의 최대 사이즈를 구할 수 있습니다. 각 깊이마다 최대 노드 갯수를 더해줍니다. 수식으로 나타내면 다음과 같습니다.
 
 
+$$
+1+d+d^2+ \cdots + d^h = \frac{d^{h+1} - 1}{d - 1}
+$$
 
 
-
-
-
-
+예를 들어, 차수가 $4$ 이고 높이 $3$ 인 트리는 최대 $\frac{4^{3+1} - 1}{4 - 1} = \frac{255}{3} = 85$ 개의 노드를 가질 수 있습니다. 
 
 
 
+## 특수한 트리들
+
+특수하게 생긴 트리에 대해서는 특별한 이름을 붙여 부르기도 합니다. 아래 그림은 특수한 트리 구조를 이미지로 나타낸 것입니다. 이후 설명은 다음 노드를 가리키는 레퍼런스의 개수가 2인 이진 트리(Binary tree)를 기준으로 하겠습니다.
+
+<img src="https://miro.medium.com/max/1890/1*CMGFtehu01ZEBgzHG71sMg.png" alt="special_tree"  />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/5-types-of-binary-tree-with-cool-illustrations-9b335c430254">towardsdatascience.com</a></p>
+
+각 트리에 대해서 하나씩 알아봅시다. 먼저 **Full Tree** 는 모든 노드가 0 혹은 2개의 자식 노드를 가지는 트리입니다. 이진 트리의 경우 Full Tree의 리프 노드의 개수는 인터널 노드의 개수보다 하나 많습니다.
+
+**Complete Tree** 는 왼쪽부터 차례대로 노드가 채워진 트리입니다. 이해를 돕기위해 이미지를 가져와 보겠습니다.
+
+![complete_tree](https://miro.medium.com/max/1000/1*M1qfRR59TR9-i4pmI-_Clg.png)
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/5-types-of-binary-tree-with-cool-illustrations-9b335c430254">towardsdatascience.com</a></p>
+
+위 그림에서 왼쪽은 Complete Tree이고 오른쪽은 Complete Tree가 아닌 것들입니다. 오른쪽 맨 위에 있는 트리는 왜 Complete Tree가 아닐까요? 깊이가 2인 노드 중에서 가장 오른쪽 노드를 건너뛰고 깊이 3인 노드가 채워졌기 때문입니다. 그 왼쪽 아래에 있는 트리 역시 깊이 2인 노드 중에서 2번째 노드를 건너 뛴 채 3, 4번째 노드가 채워졌기 때문에 Complete Tree라고 할 수 없습니다. 오른쪽 아래에 있는 트리는 깊이가 3인 부분까지는 잘 채워졌지만 깊이 4인 노드를 채우면서 가장 왼쪽을 건너 뛰고 다음 노드를 채웠기 때문에 Complete Tree라고 할 수 없습니다. 
+
+다음은 Degenerate Tree 입니다. 이 트리는 리프 노드를 제외한 모든 노드가 1개의 자식 노드만을 가지고 있습니다. 이렇다보니 Degenerate Tree의 높이는 트리의 사이즈보다 하나가 작게 됩니다.
+
+다음 Perfect Tree 는 모든 노드가 2개의 자식 노드를 가지며 모든 리프 노드가 동일한 깊이를 가지는 트리입니다. 높이가 $h$ 인 Perfect Tree는 높이 $h$ 인 트리의 최대 노드 개수이므로 위에서 등장했던 공식을 적용하여 Perfect Tree의 노드 개수를 $\frac{d^{h+1} - 1}{d - 1}$ 로 구할 수 있습니다.
+
+마지막 Balanced Tree 입니다. 이 트리는 트리의 모든 노드에 대하여 왼쪽과 오른쪽의 하위 트리의 높이가 최대 1만큼씩만 다른 트리입니다. 이 또한 이해를 돕기 위해 이미지를 대동하겠습니다.
+
+![balaced_tree](https://miro.medium.com/max/1000/1*jSq-xjEZYytNDIBpZNQC2w.png)
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/5-types-of-binary-tree-with-cool-illustrations-9b335c430254">towardsdatascience.com</a></p>
+
+이 이미지의 왼쪽은 Balanced Tree를 만족하는 트리들이고 오른쪽은 Balanced Tree를 만족하지 않는 것들입니다. 오른쪽 맨 위에 있는 트리는 왜 Balanced Tree가 아닐까요? 깊이가 1인 두 노드 중에서 왼쪽 노드를 봅시다. 이 노드의 왼쪽 서브트리의 높이는 2입니다. 하지만 오른쪽에는 아예 노드가 존재하지 않기 때문에 오른쪽 서브트리의 높이는 0이 되어 두 트리의 높이 차이가 1이상이 됩니다. 그 아래 두 트리는 루트 왼쪽과 오른쪽 서브 트리의 높이 차이가 각각 3, 2 이기 때문에 역시 Balanced Tree가 아니게 됩니다.
 
 
 
+## To Binary Search Tree
 
-
-
-
-
-
-
-
-
+연결된 리스트는 배열의 단점이었던 삽입과 삭제의 시간 복잡도를 해결했지만 탐색에 대해서는 여전히 최대 N번의 Operation을 필요로 했습니다. 트리는 연결된 리스트가 개선하지 못했던 탐색의 문제를 개선하기 위해 만들어진 자료구조 입니다. 다음에 등장하는 [이진 탐색 트리(Binary Search Tree, BST)](https://yngie-c.github.io/data structure/2020/07/06/bst/) 는 탐색에 최적화된 트리 구조로, 데이터 탐색에 필요한 Operation의 개수를 훨씬 줄일 수 있습니다.
