--- a/_posts/2020-07-02-tree.md
+++ b/_posts/2020-07-02-tree.md
@@ -15,7 +15,7 @@ tag: Data Structure
 
 이번 게시물에서 배울 자료구조는 **트리(Tree)** 입니다. 트리 구조 역시 배열(Array), 연결된 리스트(Linked List)와 동일하게 데이터를 저장하고 데이터간의 Operation을 표현하기 위한 추상화된 데이터 타입 중 하나입니다. 연결된 리스트를 변형한 것으로 연결된 리스트에서는 다른 노드를 가리키는 레퍼런스(Reference)가 하나뿐이었지만, 트리 구조에서는 여러 개의 레퍼런스를 가질 수 있습니다. 한 노드에서 시작해 여러 노드로 뻗어 나가는 모습이 나무를 거꾸로 뒤집은 모양과 유사하다고 하여 트리라는 이름이 붙었습니다.
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Tree_%28computer_science%29.svg/800px-Tree_%28computer_science%29.svg.png" alt="Tree" style="zoom:50%;" />
+<p align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Tree_%28computer_science%29.svg/800px-Tree_%28computer_science%29.svg.png" alt="Tree" style="zoom:50%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Tree_(data_structure)">위키피디아 - 트리(자료구조)</a></p>
 
@@ -28,29 +28,29 @@ tag: Data Structure
 
 트리 구조는 연결된 리스트보다는 훨씬 복잡합니다. 그렇기 때문에 트리의 복잡한 구조를 말로 나타내기 위한 다양한 용어들이 존재합니다. 트리 구조에서 사용되는 용어에 대해 아래 그림을 보며 알아봅시다.
 
-![tree_terms](https://www.tutorialspoint.com/data_structures_algorithms/images/binary_tree.jpg)
+<p align="center"><img src="https://www.tutorialspoint.com/data_structures_algorithms/images/binary_tree.jpg" alt="tree_terms"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.tutorialspoint.com/data_structures_algorithms/tree_data_structure.htm">tutorialspoint.com</a></p>
 
 가장 먼저 트리 최상단에 위치한 노드를 가리키는 용어는 **루트(Root)** 입니다. 그리고 직접 연결되어 있는 노드 중 상단에 위치한 노드를 **부모(Parent)** 노드라고 하고 아래에 위치한 노드를 **자식(Child)** 노드라고 합니다. 동일한 부모 노드로부터 나온 자식 노드는 서로 **형제/자매(Siblings)** 노드라고 합니다. 그리고 자식 노드를 갖지 않는 노드는 **리프(Leaf)** 노드라고 하며 다른 말로는 **터미널(Terminal)** 노드라고도 합니다. 리프 노드가 아닌 노드는 모두 인터널(Internal) 노드라고 합니다.
 
-<img src="https://callisto.ggsrv.com/imgsrv/FastFetch/UBER1/9781682176771_00186" alt="tree_terms2"  />
+<p align="center"><img src="https://callisto.ggsrv.com/imgsrv/FastFetch/UBER1/9781682176771_00186" alt="tree_terms2"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://science.jrank.org/programming/Tree_Structures.html">science.jrank.org</a></p>
 
 특정 노드에서부터 트리의 위쪽으로 거슬러 올라가면서 만나는 모든 노드를 **조상(Ancestor)** 노드라고 하며, 반대로 아래에 있는 모든 노드는 **후손(Descendant)** 노드라고 합니다.
 
-<img src="http://www.btechsmartclass.com/data_structures/ds_images/Path.png" alt="tree_terms3"  />
+<p align="center"><img src="http://www.btechsmartclass.com/data_structures/ds_images/Path.png" alt="tree_terms3"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="http://www.btechsmartclass.com/data_structures/tree-terminology.html">btechsmartclass.com</a></p>
 
 특정 노드로부터 다른 노드로 갈 때 거치는 과정을 **경로(Path)** 라고 합니다. **경로 길이(Length)** 는 출발 노드로부터 목적 노드까지 가는데 거치는 노드의 개수입니다. 위 이미지에서 제시한 두 예시의 경로 길이는 각각 $3, 2$ 가 됩니다. 그리고 **깊이(Depth)** 는 루트로부터 목적 노드까지의 경로 길이를 나타내는 용어입니다.
 
-<img src="http://www.btechsmartclass.com/data_structures/ds_images/Height.png" alt="tree_term4"  />
+<p align="center"><img src="http://www.btechsmartclass.com/data_structures/ds_images/Height.png" alt="tree_term4"  /></p>
 
 **높이(Height)** 는 트리에 존재하는 최대 경로 길이를 나타냅니다. 아래는 $I, J, K$ 노드에서 출발하여 루트 노드로 가는 경로의 길이가 최대이며 이 값이 3이므로 이 트리의 높이는 3이라고 할 수 있습니다.
 
-![tree_term_degree](http://www.btechsmartclass.com/data_structures/ds_images/Degree.png)
+<p align="center"><img src="http://www.btechsmartclass.com/data_structures/ds_images/Degree.png" alt="tree_term_degree"  /></p>
 
 특정 노드가 가지고 잇는 자식 노드의 개수를 **차수(Degree)** 라고 하며 트리에 존재하는 모든 노드의 개수를 트리의 **크기(Size)** 라고 합니다. 위 이미지에 있는 트리는 총 11개의 노드를 가지고 있으므로 사이즈를 11이라 할 수 있습니다. 
 
@@ -78,7 +78,7 @@ $$
 
 특수하게 생긴 트리에 대해서는 특별한 이름을 붙여 부르기도 합니다. 아래 그림은 특수한 트리 구조를 이미지로 나타낸 것입니다. 이후 설명은 다음 노드를 가리키는 레퍼런스의 개수가 2인 이진 트리(Binary tree)를 기준으로 하겠습니다.
 
-<img src="https://miro.medium.com/max/1890/1*CMGFtehu01ZEBgzHG71sMg.png" alt="special_tree"  />
+<p align="center"><img src="https://miro.medium.com/max/1890/1*CMGFtehu01ZEBgzHG71sMg.png" alt="special_tree"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/5-types-of-binary-tree-with-cool-illustrations-9b335c430254">towardsdatascience.com</a></p>
 
@@ -86,7 +86,7 @@ $$
 
 **Complete Tree** 는 왼쪽부터 차례대로 노드가 채워진 트리입니다. 이해를 돕기위해 이미지를 가져와 보겠습니다.
 
-![complete_tree](https://miro.medium.com/max/1000/1*M1qfRR59TR9-i4pmI-_Clg.png)
+<p align="center"><img src="https://miro.medium.com/max/1000/1*M1qfRR59TR9-i4pmI-_Clg.png" alt="complete_tree"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/5-types-of-binary-tree-with-cool-illustrations-9b335c430254">towardsdatascience.com</a></p>
 
@@ -98,7 +98,7 @@ $$
 
 마지막 Balanced Tree 입니다. 이 트리는 트리의 모든 노드에 대하여 왼쪽과 오른쪽의 하위 트리의 높이가 최대 1만큼씩만 다른 트리입니다. 이 또한 이해를 돕기 위해 이미지를 대동하겠습니다.
 
-![balaced_tree](https://miro.medium.com/max/1000/1*jSq-xjEZYytNDIBpZNQC2w.png)
+<p align="center"><img src="https://miro.medium.com/max/1000/1*jSq-xjEZYytNDIBpZNQC2w.png" alt="balaced_tree"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/5-types-of-binary-tree-with-cool-illustrations-9b335c430254">towardsdatascience.com</a></p>
 
